Fix modal visibility on page load

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
 
             <div class="hero-visual">
-                <img src="/Assets/home.jpg" alt="Data Network Visualization" class="network-img">
+                <img src="/assets/home.jpg" alt="Data Network Visualization" class="network-img">
             </div>
         </div>
     </header>
@@ -124,7 +124,7 @@
                     <strong>integrity</strong>, <strong>empathy</strong>, and a commitment to <strong>continuous growth</strong>.
                 </p>
                     <div class="cta-mini">
-                        <a href="/Assets/Teresia Wanjiku CV.pdf" class="btn-text">Download Full Resume <i class="fas fa-arrow-right"></i></a>
+                        <a href="/assets/Teresia Wanjiku CV.pdf" class="btn-text">Download Full Resume <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
 
@@ -166,7 +166,7 @@
             <div class="portfolio-grid">
                 <div class="project-card card-base" data-project="bank">
                     <div class="project-image">
-                        <img src="/Assets/bank_loan/Summary.png" alt="Bank loan analysis" class="project-img" loading="lazy">
+                        <img src="/assets/bank_loan/Summary.png" alt="Bank loan analysis" class="project-img" loading="lazy">
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Bank Loan Analysis Dashboard</h3>
@@ -183,7 +183,7 @@
 
                 <div class="project-card card-base" data-project="water">
                     <div class="project-image">
-                        <img src="/Assets/maji_ndogo/national.png" alt="Maji ndogo" class="project-img" loading="lazy">
+                        <img src="/assets/maji_ndogo/national.png" alt="Maji Ndogo" class="project-img" loading="lazy">
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Maji Ndogo Water Infrastructure</h3>
@@ -206,7 +206,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <div>
-                    <h2 class="modal-title" id="modalTitle"></h2>
+                    <h2 class="modal-title" id="modalTitle">Project Title</h2>
                     <div class="project-tags" id="modalTags"></div>
                 </div>
                 <button class="close-modal" id="closeModal">
